--- a/index.html
+++ b/index.html
@@ -193,7 +193,14 @@
         <li><a href="https://pe.linkedin.com/in/hubert-gonzalo-condori-nina-a94959385">Hubert Gonzalo Condori Nina</a></li>
       </ul>
     </section>
-
+    
+    <section>
+      <h2>Sus Paginas Web:</h2>
+      <ul>
+        <li><a href="https://youtube.com">https://google.com</a></li>
+      </ul>
+    </section>
+    
     <section>
       <h2>Contacto:</h2>
       <div class="contacto">
