--- a/index.html
+++ b/index.html
@@ -166,16 +166,7 @@
     </section>
 
     <section>
-      <h2>Proyectos en Proceso de Aprendizaje:</h2>
-      <ul>
-        <li>Desarrollo web con JavaScript, HTML y CSS.</li>
-        <li>Investigación sobre Seguridad en Aplicaciones Web.</li>
-        <li>Estudio de Matemáticas Discretas y Álgebra Booleana.</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Perfiles de Mis Docentes:</h2>
+      <h2>Perfiles de Docentes:</h2>
       <ul>
         <li><a href="https://www.linkedin.com/in/ecuadrosv">Ernesto Cuadros Vargas</a></li>
         <li><a href="https://pe.linkedin.com/in/kelly-vizconde-la-motta-3a57a4143">Kelly Vizconde La Motta</a></li>
