--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
     
     <section>
       <h2>Sobre Mí:</h2>
-      <p>Me llamo <strong>Santiago Valdiviezo Guardia</strong>, soy estudiante de Computer Science en la Universidad Católica San Pablo (Arequipa, Perú). Actualmente me encuentro cursando el segundo ciclo y tengo un gran interés en cómo las innovaciones tecnológicas pueden transformar la vida cotidiana y generar un impacto positivo en la sociedad. Me enfoco en crear soluciones tecnológicas que resuelvan problemas y mejoren la calidad de vida de las personas.</p>
+      <p>Me llamo <strong>Santiago Valdiviezo Guardia</strong>, soy estudiante de Computer Science en la Universidad Católica San Pablo (Arequipa, Perú). Actualmente me encuentro cursando el segundo ciclo y tengo un gran interés en cómo las innovaciones tecnológicas pueden transformar la vida cotidiana y generar un impacto positivo en varios sectores de la sociedad actual.</p>
     </section>
 
     <section>
-      <h2>Mis Intereses:</h2>
+      <h2>Intereses:</h2>
       <ul>
         <li>Desarrollo de Aplicaciones para Facilitar Tareas Cotidianas.</li>
         <li>Inteligencia Artificial aplicada a la Medicina.</li>
