--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yamil Santiago Valdiviezo Guardia - Estudiante de Computer Science</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <meta name="google-site-verification" content="tLTFClDym5k0ktQp5e3zVDrxsk_PvbeC1Siijky880E" />
   <style>
     * {
       margin: 0;
